--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Songram - Where AI meets music creation and social sharing" />
     <meta name="theme-color" content="#0a0a0f" />
     <title>Songram | AI-Powered Music Creation Platform</title>
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/6672acc5c2e3d9aa757c7ab19/de3b92a4a02d2fa79b36c2d7c.js");</script>
   </head>
   <body>
     <div id="root"></div>
