fixed padding, nav bar glitch and AI beat maker demo. created favicon. updated the contents too.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/Songram_Logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/songram_logo_5.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Songram - Where AI meets music creation and social sharing" />
+    <meta name="description" content="Songram - The ultimate social platform for music creators to share, connect, and go viral." />
     <meta name="theme-color" content="#0a0a0f" />
-    <title>Songram | AI-Powered Music Creation Platform</title>
+    <title>Songram | Music Creation Platform</title>
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/6672acc5c2e3d9aa757c7ab19/de3b92a4a02d2fa79b36c2d7c.js");</script>
   </head>
   <body>
