chore-update-site-theme

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/songram_logo_5.png" />
@@ -7,6 +7,9 @@
     <meta name="description" content="Songram - The ultimate social platform for music creators to share, connect, and go viral." />
     <meta name="theme-color" content="#0a0a0f" />
     <title>Songram | Music Creation Platform</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/6672acc5c2e3d9aa757c7ab19/de3b92a4a02d2fa79b36c2d7c.js");</script>
   </head>
   <body>
