--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-
-
-    <link rel="icon" type="image/svg+xml" href="/src/assets/songram_logo12.png" />
-
+    <link rel="icon" type="image/svg+xml" href="/src/assets/songram_logo_.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Songram - The ultimate social platform for music creators to share, connect, and go viral." />
     <meta name="theme-color" content="#0a0a0f" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Songram" />
+    <meta property="og:description" content="The ultimate social platform for song creation" />
+    <meta property="og:image" content="https://songram.app/songram_preview.png" />
+    <meta property="og:url" content="https://songram.app" />
+    <meta property="og:type" content="website" />
+    <!-- Twitter Card Meta Tags (for broader compatibility) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Songram" />
+    <meta name="twitter:description" content="The ultimate social platform for song creation" />
+    <meta name="twitter:image" content="https://songram.app/songram_preview.png" />
+
     <title>Songram | Music Creation Platform</title>
-    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/6672acc5c2e3d9aa757c7ab19/de3b92a4a02d2fa79b36c2d7c.js");</script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/6672acc5c2e3d9aa757c7ab19/83ae707f976a0e89ee74c85e1.js");</script>
   </head>
   <body>
     <div id="root"></div>
