--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/songram_logo_.png" />
+    <link rel="icon" type="image/png" href="/public/songram_logo_.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Songram - The ultimate social platform for music creators to share, connect, and go viral." />
     <meta name="theme-color" content="#0a0a0f" />
